syntax = "proto3";

package io.netifi.proteus.broker.info;

import "google/protobuf/empty.proto";

option java_package = "io.netifi.proteus.broker.info";
option java_outer_classname = "BrokerInfo";
option java_multiple_files = true;

message Group {
    string group  = 1;
    Broker broker = 2;
    repeated string services = 3;
}

message Destination {
    string group       = 1;
    string destination = 2;
    Broker broker      = 3;
    repeated string services = 4;
}

message Broker {
    string brokerId   = 1;
    string ipAddress  = 2;
    int32 port        = 3;
    int32 clusterPort = 4;
    int32 adminPort   = 5;
}

message Event {
    enum Type {
        JOIN  = 0;
        LEAVE = 1;
    }
    Type type               = 1;
    Broker broker           = 2;
    Destination destination = 3;
}

message ServiceRegistrationRequest {
   string service = 1;
   string group = 2;
   string destination = 3;
}

message ServiceRegistrationResponse {}

message ServiceEventRequest {
   string service = 1;
}

message ServiceEventResponse {
   string service     = 1;
   string group       = 2;
}

service BrokerInfoService {
    rpc Brokers (google.protobuf.Empty) returns (stream Broker) {}
    rpc Groups (Broker) returns (stream Group) {}
    rpc Destinations (Broker) returns (stream Destination) {}
    rpc DestinationsByBrokerAndGroup (Group) returns (stream Destination) {}
    rpc DestinationsByGroup (Group) returns (stream Destination) {}
    rpc BrokersWithGroup (Group) returns (stream Broker) {}
    rpc BrokerWithDestination (Destination) returns (Broker) {}
    rpc StreamGroupEvents (Group) returns (stream Event) {}
    rpc StreamDestinationEvents (Destination) returns (stream Event) {}
    rpc StreamBrokerEvents (google.protobuf.Empty) returns (stream Event) {}
    rpc StreamServiceEvents (google.protobuf.Empty) returns (stream ServiceEventResponse) {}
    rpc RegisterService (ServiceRegistrationRequest) returns (ServiceRegistrationResponse) {}
}

